04-MiniJavaAST/src/main/java/br/ufpe/cin/if688/minijava/gramatica.g4
grammar gramatica;
goal
: mainClass (classDeclaration)* EOF
;

mainClass
: 'class' identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' identifier ')' '{' statement '}' '}'
;

classDeclaration
: 'class' identifier ('extends' identifier)? '{' (varDeclaration)* (methodDeclaration)* '}'
;

varDeclaration
: type identifier ';'
;

methodDeclaration
: 'public' type identifier '(' (type identifier( ',' type identifier )* )? ')' '{' (varDeclaration)* (statement)*
'return' expression ';' '}'
;

type
: 'int' '[' ']'
| 'boolean'
| 'int'
| identifier
;

statement
: '{' (statement)* '}'
| 'if' '(' expression ')' statement 'else' statement
| 'while' '('expression')' statement
| 'System.out.println' '('expression')' ';'
| identifier '=' expression ';'
| identifier '[' expression ']' '=' expression ';'
;

expression
: expression ( '&&' | '<' | '+' | '-' | '*' ) expression
| expression '[' expression ']'
| expression '.' 'length'
| expression '.' identifier '(' (expression( ',' expression )* )? ')'
| integerLiteral
| 'true'
| 'false'
| identifier
| 'this'
| 'new' 'int' '[' expression ']'
| 'new' identifier '(' ')'
| '!' expression
| '(' expression ')'
;

identifier: IDENTIFIER;

IDENTIFIER
: [_a-zA-Z][_a-zA-Z0-9]*
;

integerLiteral: INTEGERLITERAL;

INTEGERLITERAL
: '0'
| [1-9][0-9]*
;

COMMENT
: '/*' .*? '*/' -> skip
;

COMMENTL
: '//' ~[\r\n]* -> skip
;

WHITESPACE
: [ \t\n\r\f] -> skip
;
